# Multi-AI-Agent

./: .env  .env.example  README.md  main.py  pyproject.toml
agents/: __init__.py
agents/coordinator/: __init__.py  agent.py  config.py  orchestrator.py
agents/planning/: __init__.py  agent.py  config.py  gemini_client.py  handlers.py
agents/weather/: __init__.py  agent.py  config.py  handlers.py
config/: __init__.py  setting.py
shared/: logger.py  utils.py
